feat: 🎸 add currentuser decorator, update dtos, auth/user modul

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,8 @@
     "paths": {
       "@/*": ["./src/*"],
       "@domains/*": ["./src/domains/*"],
-      "@config/*": ["./src/config/*"]
+      "@config/*": ["./src/config/*"],
+      "@shared/*": ["./src/shared/*"]
     }
   }
 }
