feat: 🎸 add tests events, refacto controller, add decorators

--- a/package.json
+++ b/package.json
@@ -84,6 +84,10 @@
       "**/*.(t|j)s"
     ],
     "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
+    "testEnvironment": "node",
+    "moduleNameMapper": {
+      "^@/(.*)$": "<rootDir>/$1",
+      "^@domains/(.*)$": "<rootDir>/domains/$1"
+    }
   }
 }
