--- a/package.json
+++ b/package.json
@@ -8,19 +8,20 @@
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
-    "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start": "cross-env STAGE=dev nest start",
+    "start:dev": "cross-env STAGE=dev nest start --watch",
+    "start:debug": "cross-env STAGE=dev nest start --debug --watch",
+    "start:prod": "cross-env STAGE=prod node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "test": "cross-env STAGE=test jest",
+    "test:watch": "cross-env STAGE=test jest --watch",
+    "test:cov": "cross-env STAGE=test jest --coverage",
+    "test:debug": "cross-env STAGE=test node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+    "test:e2e": "cross-env STAGE=test jest --config ./test/jest-e2e.json",
     "git": "git add . && git cz && git push"
   },
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.0.1",
     "@nestjs/core": "^10.0.0",
@@ -87,7 +88,8 @@
     "testEnvironment": "node",
     "moduleNameMapper": {
       "^@/(.*)$": "<rootDir>/$1",
-      "^@domains/(.*)$": "<rootDir>/domains/$1"
+      "^@domains/(.*)$": "<rootDir>/domains/$1",
+      "^@config/(.*)$": "<rootDir>/config/$1"
     }
   }
 }
